<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:background="#1f1a30"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navmenu"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/adminnavheader"
        app:menu="@menu/main_menu" />



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="#39304d"
                app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:navigationIcon="@drawable/ic_baseline_menu_24"
                app:title="Welcome"
                app:titleTextColor="@color/white" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:padding="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/toolbar">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:fontFamily="@font/roboto_medium"
                    android:padding="15dp"
                    android:text="Admin Panel"
                    android:textAlignment="textStart"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />


                <androidx.gridlayout.widget.GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="550dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="5dp"

                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="73dp"

                    android:padding="12dp"
                    app:columnCount="3"
                    app:rowCount="4">

                    <androidx.cardview.widget.CardView
                        android:layout_width="162dp"
                        android:layout_height="80dp"
                        android:onClick="oxygen"
                        app:cardBackgroundColor="#39304d"

                        app:cardCornerRadius="12dp"
                        app:layout_column="0"
                        app:layout_columnWeight="1"
                        app:layout_gravity="fill"
                        app:layout_row="0"
                        app:layout_rowWeight="1">

                        <LinearLayout
                            android:id="@+id/linear"

                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imageView"
                                android:layout_width="80dp"
                                android:layout_height="65dp"
                                android:contentDescription="@string/todo"
                                android:elevation="8dp"
                                app:srcCompat="@drawable/oxygen" />

                            <TextView
                                android:id="@+id/Home"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:text="@string/oxygen_cylinder"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="154dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:onClick="onlineDoc"
                        app:cardBackgroundColor="#39304d"
                        app:cardCornerRadius="12dp"
                        app:layout_column="1"
                        app:layout_columnWeight="1"
                        app:layout_gravity="fill"
                        app:layout_row="0"
                        app:layout_rowWeight="1">

                        <LinearLayout
                            android:id="@+id/linear1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imageView1"
                                android:layout_width="80dp"
                                android:layout_height="65dp"
                                android:contentDescription="@string/todo"
                                android:elevation="8dp"
                                app:srcCompat="@drawable/doctor" />

                            <TextView
                                android:id="@+id/mail1"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:text="@string/online_doctor"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="154dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:onClick="findMedicine"
                        app:cardBackgroundColor="#39304d"
                        app:cardCornerRadius="12dp"
                        app:layout_column="0"
                        app:layout_columnWeight="1"
                        app:layout_gravity="fill"
                        app:layout_row="1"
                        app:layout_rowWeight="1">

                        <LinearLayout
                            android:id="@+id/linear2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imageView2"
                                android:layout_width="80dp"
                                android:layout_height="65dp"
                                android:contentDescription="TODO"
                                android:elevation="8dp"
                                app:srcCompat="@drawable/medicine" />

                            <TextView
                                android:id="@+id/Login"
                                android:layout_width="102dp"
                                android:layout_height="50dp"
                                android:text="@string/find_medicine"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="154dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:onClick="mealActivity"
                        app:cardBackgroundColor="#39304d"
                        app:cardCornerRadius="12dp"
                        app:layout_column="1"
                        app:layout_columnWeight="1"
                        app:layout_gravity="fill"
                        app:layout_row="1"
                        app:layout_rowWeight="1">

                        <LinearLayout
                            android:id="@+id/linear3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imageView3"
                                android:layout_width="80dp"
                                android:layout_height="65dp"
                                android:elevation="8dp"
                                app:srcCompat="@drawable/fooddonation" />

                            <TextView
                                android:id="@+id/Mail3"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:text="@string/meals_delivery"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="154dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:onClick="ForBed"
                        app:cardBackgroundColor="#39304d"
                        app:cardCornerRadius="12dp"
                        app:layout_column="0"
                        app:layout_columnWeight="1"
                        app:layout_gravity="fill"
                        app:layout_row="2"
                        app:layout_rowWeight="1">

                        <LinearLayout
                            android:id="@+id/linear6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imageView6"
                                android:layout_width="80dp"
                                android:layout_height="65dp"
                                android:contentDescription="TODO"
                                android:elevation="8dp"
                                app:srcCompat="@drawable/bed" />

                            <TextView
                                android:id="@+id/covid"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:text="Hospital Bed"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="154dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:onClick="ShareCare"
                        app:cardBackgroundColor="#39304d"
                        app:cardCornerRadius="12dp"
                        app:layout_column="1"
                        app:layout_columnWeight="1"
                        app:layout_gravity="fill"
                        app:layout_row="2"
                        app:layout_rowWeight="1">

                        <LinearLayout
                            android:id="@+id/linear7"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imageView7"
                                android:layout_width="80dp"
                                android:layout_height="65dp"
                                android:contentDescription="TODO"
                                android:elevation="8dp"
                                app:srcCompat="@drawable/donation" />

                            <TextView
                                android:id="@+id/shared"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:text="Share and care"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="154dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:onClick="ambulance"
                        app:cardBackgroundColor="#39304d"
                        app:cardCornerRadius="12dp"
                        app:layout_column="0"
                        app:layout_columnWeight="1"
                        app:layout_gravity="fill"
                        app:layout_row="3"
                        app:layout_rowWeight="1">

                        <LinearLayout
                            android:id="@+id/linear8"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imageView8"
                                android:layout_width="match_parent"
                                android:layout_height="65dp"
                                android:contentDescription="TODO"
                                android:elevation="8dp"
                                app:srcCompat="@drawable/ambulance" />

                            <TextView
                                android:id="@+id/ambulance"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:text="Ambulance "
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:layout_width="154dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginTop="5dp"
                        android:onClick="BloodDonation"
                        app:cardBackgroundColor="#39304d"
                        app:cardCornerRadius="12dp"
                        app:layout_column="1"
                        app:layout_columnWeight="1"
                        app:layout_gravity="fill"
                        app:layout_row="3"
                        app:layout_rowWeight="1">

                        <LinearLayout
                            android:id="@+id/linear9"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:orientation="vertical">

                            <ImageView
                                android:id="@+id/imageView9"
                                android:layout_width="100dp"
                                android:layout_height="75dp"
                                android:contentDescription="TODO"
                                android:elevation="8dp"
                                app:srcCompat="@drawable/blooddonation" />

                            <TextView
                                android:id="@+id/blooddonation"
                                android:layout_width="match_parent"
                                android:layout_height="50dp"
                                android:text="Blood Donation"
                                android:textAlignment="center"
                                android:textColor="@color/white"
                                android:textSize="20sp"
                                android:textStyle="bold" />
                        </LinearLayout>
                    </androidx.cardview.widget.CardView>

                </androidx.gridlayout.widget.GridLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.drawerlayout.widget.DrawerLayout>